# Fundamantels-of-Agentic-AI

./: README.md
CrewAI/class10 project/: Fun_fact.md  pyproject.toml
CrewAI/class10 project/src/class10/: __init__.py  main.py  main1.py  main2.py  main3.py
CrewAI/knowldge_rag/: README.md  pyproject.toml
CrewAI/knowldge_rag/src/knowldge_rag/: main.py  main1.py
CrewAI/localllm2/: README.md  poem.txt
CrewAI/multiple_agents/: pyproject.toml
CrewAI/multiple_agents-two-llms/: pyproject.toml
CrewAI/multiple_agents-two-llms/src/multiple_agents/crews/dev_crew/: dev_crew.py
CrewAI/multiple_agents/src/multiple_agents/: main1.py  main2.py
CrewAI/multiple_agents/src/multiple_agents/crews/dev_crew/: dev_crew.py  dev_crew1.py
CrewAI/multiple_agents/src/multiple_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
CrewAI/project1/: pyproject.toml  report.md
CrewAI/project1/src/project1/: crew.py  main.py
CrewAI/project2/panaversity/: .env  pyproject.toml
CrewAI/project2/panaversity/src/panaversity/: __init__.py  main.py
CrewAI/project2/panaversity/src/panaversity/crews/config/: agents.yaml  task.yaml
CrewAI/project2/panaversity/src/panaversity/crews/teaching_crew/: teaching_crew.py
CrewAI/project3 13 AI-201/litellm1/: poem.txt  pyproject.toml
CrewAI/project3 13 AI-201/litellm1/src/litellm1/: main1.py
