[project]
name = "knowldge_rag"
version = "0.1.0"
description = "knowldge_RAG using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "knowldge_rag.main:kickoff"
plot = "knowldge_rag.main:plot"
rag ="knowldge_rag.main1:test_knowledge_rag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
